--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kentico/kontent-delivery": "^9.0.0",
     "bootstrap": "^4.3.0",
     "element-ui": "^2.5.4",
     "nouislider": "^11.1.0",
+    "rxjs": "^6.5.4",
+    "universal-cookie": "^4.0.3",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.1",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
