--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "buildpreview":"vue-cli-service build --mode preview",
+    "servepreview":"vue-cli-service serve --mode preview"
   },
   "dependencies": {
     "@kentico/kontent-delivery": "^9.0.0",
